feature: build docker image